--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,58 @@
-body {
-    display: flex;
-    justify-content: center;
+* {
+    box-sizing: border-box;
 }
-#container {
-    border: 20px solid gray;
-    width: 330px;
-    height: 460px;
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center; 
+    background: linear-gradient(90deg, #9b887d7e 30%, #9b887d7e 100%), url(images/dm-background.png);
+}
+
+.container {
+    height: 469px;
+    width: 375px;
     display: flex;
     flex-direction: column;
-
+    border: 2px solid black;
+    border-radius: 3px;    
+    margin: 0px 20px;
 }
-#display {
-    width: 328px;
-    height: 100px;
-    border: 1px solid black;
 
-}
-#keypad {
-    width: 328px;
-    height: 300px;
-    border: 1px solid black;
+.screen {
+    height: 20%;
+    width: 100%;
+    border: 2px solid black;
     display: flex;
+    justify-content: flex-end;
     align-items: flex-end;
-    margin-top: 20px;
+    font-size: 3.8em;
+    font-family: 'Open Sans', Arial, sans-serif;
+    padding-right: 10px;
+    overflow: hidden;
+}
+.keypad {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Open Sans', Arial, sans-serif;
+}
+.row {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+}
+.button {
+    flex-basis: 25%;
+    height: 100%;
+    display: flex;
+    border: 2px solid black;
+    background: #cdcdcd;
+    font-size: 2.5em;
+    color: black;
+    justify-content: center;
+    align-items: center;
 }
