--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     padding: 0;
     margin: 0;
@@ -8,23 +9,22 @@ body {
     height: 100vh;
     align-items: center;
     justify-content: center; 
-    background: linear-gradient(90deg, #9b887d7e 30%, #9b887d7e 100%), url(images/dm-background.png);
+    background: #d9ccb8;
 }
 
 .container {
-    height: 469px;
-    width: 375px;
+    height: 470px;
+    width: 360px;
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
+    border: 5px solid black;
     border-radius: 3px;    
     margin: 0px 20px;
 }
-
 .screen {
     height: 20%;
     width: 100%;
-    border: 2px solid black;
+    border: 5px solid black;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -39,12 +39,14 @@ body {
     flex-direction: column;
     font-family: 'Open Sans', Arial, sans-serif;
 }
+
 .row {
     width: 100%;
     height: 20%;
     display: flex;
     flex-direction: row;
 }
+
 .button {
     flex-basis: 25%;
     height: 100%;
@@ -55,4 +57,42 @@ body {
     color: black;
     justify-content: center;
     align-items: center;
+}
+
+.screen {
+    background: #85c1d4;
+}
+
+.button::selection{
+    background: transparent;
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
+.button:active {
+    background: #c2c2c2;
+}
+
+#zero {
+    flex-basis: 50%;
+}
+
+.operator,
+#equals {
+    background: #f2ae65;
+}
+
+.operator:active,
+#equals:active {
+    background: #df9f5a;
+}
+
+.modifier {
+    background: #e29b98;
+}
+
+.modifier:active {
+    background:  #d4928f;
 }
